# localdata-mcp

./: .dockerignore  .gitignore  .gitmodules  20250105-1500_project_v1.3.1_PRD_time_series_integration.txt  ADVANCED_EXAMPLES.md  ADVANCED_FORECASTING_IMPLEMENTATION.md  API_REFERENCE.md  ARCHITECTURE.md  BLOG_POST.md  CHANGELOG.md  CLAUDE.md  COMMUNITY_FORUM_ANNOUNCEMENTS.md  CONFIGURATION.md  CONTRIBUTING.md  COVERAGE_ACHIEVEMENT_SUMMARY.md  COVERAGE_SUCCESS_REPORT.md  DATABASE_CONNECTIONS.md  DOCKER_USAGE.md  Dockerfile  FAQ.md  FINALIZATION_SUMMARY.md  FINAL_COVERAGE_REPORT.md  GITHUB_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY_33_4.md  INFLUXDB_FIX.md  LOGO_DESIGN_BRIEF.md  MCP_PUBLISHING_REPORT.md  MCP_SPLIT.md  MIGRATION_GUIDE.md  MULTIVARIATE_IMPLEMENTATION_SUMMARY.md  NOTICE  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PROMOTIONAL_PACKAGE_SUMMARY.md  PUBLICATION_REPORT.md  PYPI_PUBLISHING_INSTRUCTIONS.md  README.md  RELEASE_NOTES_v1.3.0.md  REPOSITORY_OPTIMIZATION_GUIDE.md  SOCIAL_MEDIA_CONTENT.md  SUBTASK_43.7_COMPLETION_REPORT.md  (+70 more)
.claude-plugin/: plugin.json
.github/: WORKFLOWS.md  dependabot.yml  pull_request_template.md
.serena/: project.yml
.taskmaster/: state.json
agents/: bi-analyst.md  data-explorer.md  data-researcher.md  data-scientist.md  forecaster.md  geospatial-analyst.md  graph-analyst.md  graph-data-analyst.md  ml-analyst.md  operations-analyst.md  research-analyst.md  statistical-analyst.md
docs/: BACKWARD_COMPATIBILITY.md  PERFORMANCE_BENCHMARKS.md  TIMEOUT_SYSTEM.md  changelog.md  conf.py  configuration.md  core-pipeline-framework-design.md  (+9 more)
(+724 files in other folders)
