[project]
name = "localdata-mcp"
version = "0.1.0"
description = "A dynamic MCP server for local databases and text files."
authors = [{ name = "Christian C. Berclaz" }]
requires-python = ">=3.8"
dependencies = [
  "fastmcp",
  "pandas",
  "sqlalchemy",
  "psycopg2-binary",
  "mysql-connector-python",
  "pymongo",
  "pyyaml",
  "toml",
]

[project.scripts]
localdata-mcp = "localdata_mcp.localdata_mcp:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
